# Timelapse_Project

./: CMakeLists.txt  README.md  boards.txt  index.html  params.json  timelapse.html
scripts/: index.js
src/: multiCameraIrControl.cpp  multiCameraIrControl.h  pageNotFound.html  timelapse.html  timelapse.ino  webPageContent.cpp  webPageContent.h
styles/: mystyles.css
